# EPIC_school

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  EPIC_Client.py  EPIC_Server.py  epic_chatbot.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  weather.py
.github/workflows/: deploy-aws.yml
.streamlit/: config.toml  secrets.toml.example
