[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "mcp[cli]>=1.26.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "streamlit>=1.40.0",
]

[tool.uv.workspace]
members = [
    "weather",
]
